--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vintage Photo Booth</title>
+    <title>SnapSpot Photo Booth</title>
     <style>
         body {
             font-family: 'Courier New', monospace;
@@ -374,7 +374,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Vintage Photo Booth</h1>
+            <h1>SnapSpot Photo Booth</h1>
             <p>Strike a pose and capture the moment!</p>
         </div>
 
